force-app/main/default/objects/Episode__c/fields/Full_Episode_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Episode_Name__c</fullName>
    <formula>TV_Series__r.Series_Name__c &amp; &quot; - &quot; &amp; Season__r.Name &amp; &quot; - &quot; &amp;  Name</formula>
    <label>Full Episode Name</label>
    <type>Text</type>
</CustomField>