force-app/main/default/objects/Episode__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>