force-app/main/default/objects/Episode__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>If episodes are only numbered, leave this field blank.</inlineHelpText>
    <label>Title</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>