force-app/main/default/objects/Episode__c/fields/TV_Series__c.field-meta.xml
<CustomField>
    <fullName>TV_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TV Series</label>
    <referenceTo>TV_Series__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>