force-app/main/default/objects/Episode__c/recordTypes/Series_Episode.recordType-meta.xml
<RecordType>
    <fullName>Series_Episode</fullName>
    <active>true</active>
    <label>Series Episode</label>
</RecordType>