force-app/main/default/objects/Episode__c/validationRules/Episode_Has_To_Have_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Episode_Has_To_Have_Description</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Each type of episode has to have its own description</errorMessage>
</ValidationRule>