force-app/main/default/objects/Episode__c/validationRules/Episode_has_to_have_series_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Episode_has_to_have_series_assigned</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
   AND( 
      ISBLANK(TV_Series__c), 
            RecordType.DeveloperName = &apos;Series_Episode&apos; 
      ), 
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>TV_Series__c</errorDisplayField>
    <errorMessage>Series Episode has to have TV Series assigned to it.</errorMessage>
</ValidationRule>