force-app/main/default/objects/Episode__c/validationRules/Movie_Cannot_Have_TV_Series_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Movie_Cannot_Have_TV_Series_Assigned</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
 NOT(ISBLANK(TV_Series__c)) ,
RecordType.DeveloperName = &apos;Movie&apos;
),
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>TV_Series__c</errorDisplayField>
    <errorMessage>Movie cannot have TV series assigned</errorMessage>
</ValidationRule>