force-app/main/default/objects/Episode__c/validationRules/TV_Series_Must_Equal_Season_TV_Series.validationRule-meta.xml
<ValidationRule>
    <fullName>TV_Series_Must_Equal_Season_TV_Series</fullName>
    <active>true</active>
    <errorConditionFormula>Season__r.TV_Series__c  &lt;&gt;  TV_Series__c</errorConditionFormula>
    <errorDisplayField>TV_Series__c</errorDisplayField>
    <errorMessage>TV series for episode must be the same as TV series of related season</errorMessage>
</ValidationRule>