force-app/main/default/objects/Episode__c/listViews/Single_series_episodes.listView-meta.xml
<ListView>
    <fullName>Single_series_episodes</fullName>
    <columns>NAME</columns>
    <columns>Full_Episode_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TV_Series__c</field>
        <operation>equals</operation>
        <value>Game of Thrones</value>
    </filters>
    <label>Single Series episodes (Edit filter)</label>
</ListView>